# image_scan_describe_ai_rag

./: .env  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  dump.rdb  image.db  prometheus.yml  pyproject.toml  requirements.txt
app/: main.py  report_generator.py
app/api/: admin_alerts.py  admin_dashboard.py  admin_health_check.py  aduit_log.py  calibration_report.py  export_training_data.py  human_approval.py  performance_analyzer.py  report_generation.py  scan_details.py  scan_history.py  scan_image.py  scan_status.py  submit_feedback.py  ws_scan_progress.py
app/auth/: auth.py  login.py  signup.py
app/config/: active_learning.py  costs.py  rate_limit.py
app/dependencies/: rate_limit.py
app/infrastructure/: celery_app.py
app/models/: CHANGES.md  Evaluation.py  README.md  STRUCTURE.py  __init__.py  audit_log.py  cost_calculate.py  dependencies.py  feedback.py  model_registry.py  models.py  rate_limit.py  system_alert.py  training_dataset.py  user.py
app/scripts/: worker_autoscale.py
app/services/: active_learning.py  admin_dashboard.py  alert_engine.py  audit_logger.py  calculate_cost.py  calibration.py  calibration_lookup.py  calibration_stats.py  confidence.py  file_validator.py  image_scan.py  performance_analyzer.py  progress_updater.py  rate_limiter.py  report_service.py  validator.py
app/utils/: custom_json_encoder.py  jwt.py  schema_guard.py  security.py  utils.py
frontend/: package-lock.json  package.json  vite.config.ts
uploads/: f07ba4a0-306e-4e20-8b69-a9b9b74ab2c3_IMG_3441.heic
(+53 files in other folders)
