[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-vision-imageanalysis>=1.0.0",
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "redis>=7.1.0",
    "reportlab>=4.4.9",
    "uvicorn>=0.40.0",
]
